--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multer",
+  "name": "@mlakmal/multer",
   "description": "Middleware for handling `multipart/form-data`.",
   "version": "1.4.1",
   "contributors": [
