--- a/.npmrc.template
+++ b/.npmrc.template
@@ -1,3 +1,2 @@
 always-auth=true
-registry=https://npmjs.com/package/mlakmal/multer/npm/
-//npmjs.com/package/mlakmal/multer/npm/:_authToken=${API_TOKEN}
+//registry.npmjs.org/:_authToken=:_authToken=${API_TOKEN}
