--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mlakmal/multer",
+  "name": "anthem-multer",
   "description": "Middleware for handling `multipart/form-data`.",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "contributors": [
     "Hage Yaapa <captain@hacksparrow.com> (http://www.hacksparrow.com)",
     "Jaret Pfluger <https://github.com/jpfluger>",
